# HelloGraphics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: DeviceResources.h  Window.h
src/: DeviceResources.cpp  Window.cpp  main.cpp
